<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="31dp"
        android:text="@string/txtTitle"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/txtPrints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPrints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/txtPrints"
        android:inputType="number"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="214dp"
        android:layout_height="121dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="212dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrints">

        <RadioButton
            android:id="@+id/radSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radSmall"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radMedium"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radLarge"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="120dp"
        android:text="@string/btnCost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCost" />

</androidx.constraintlayout.widget.ConstraintLayout>